--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -111,72 +111,101 @@ jobs:
         name: security-scan-results
         path: bandit-report.json
 
-  docker-build:
-    name: Build Docker Image
+  deploy-staging:
+    name: Deploy to Staging (Azure App Service)
     runs-on: ubuntu-latest
     needs: [test, build]
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/develop'
+    environment: staging
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-      
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
+    - name: Set up Python ${{ env.PYTHON_VERSION }}
+      uses: actions/setup-python@v4
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        python-version: ${{ env.PYTHON_VERSION }}
         
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        tags: |
-          ${{ secrets.DOCKER_USERNAME }}/veridoc-ai:latest
-          ${{ secrets.DOCKER_USERNAME }}/veridoc-ai:${{ github.sha }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-
-  deploy-staging:
-    name: Deploy to Staging
-    runs-on: ubuntu-latest
-    needs: [test, build, docker-build]
-    if: github.ref == 'refs/heads/develop'
-    environment: staging
-    
-    steps:
-    - name: Deploy to staging environment
+    - name: Install dependencies
       run: |
-        echo "Deploying to staging environment..."
-        # Add your staging deployment commands here
-        # Example: kubectl apply -f k8s/staging/
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
         
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        
+    - name: Deploy to Azure App Service - Staging
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ secrets.AZURE_APP_SERVICE_NAME_STAGING }}
+        package: .
+        startup-command: 'uvicorn simple_web_interface_v2:app --host 0.0.0.0 --port 8001'
+        
+    - name: Configure App Settings - Staging
+      run: |
+        az webapp config appsettings set \
+          --name ${{ secrets.AZURE_APP_SERVICE_NAME_STAGING }} \
+          --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+          --settings \
+            OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}" \
+            OPENAI_BASE_URL="${{ secrets.OPENAI_BASE_URL }}" \
+            WEBSITES_PORT=8001 \
+            SCM_DO_BUILD_DURING_DEPLOYMENT=true
+            
     - name: Notify deployment
       run: |
-        echo "Staging deployment completed successfully!"
+        echo "Staging deployment to Azure App Service completed successfully!"
 
   deploy-production:
-    name: Deploy to Production
+    name: Deploy to Production (Azure App Service)
     runs-on: ubuntu-latest
-    needs: [test, build, docker-build]
+    needs: [test, build]
     if: github.ref == 'refs/heads/main'
     environment: production
     
     steps:
-    - name: Deploy to production environment
-      run: |
-        echo "Deploying to production environment..."
-        # Add your production deployment commands here
-        # Example: kubectl apply -f k8s/production/
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Set up Python ${{ env.PYTHON_VERSION }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ env.PYTHON_VERSION }}
         
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        
+    - name: Login to Azure
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+        
+    - name: Deploy to Azure App Service - Production
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ secrets.AZURE_APP_SERVICE_NAME_PRODUCTION }}
+        package: .
+        startup-command: 'uvicorn simple_web_interface_v2:app --host 0.0.0.0 --port 8001'
+        
+    - name: Configure App Settings - Production
+      run: |
+        az webapp config appsettings set \
+          --name ${{ secrets.AZURE_APP_SERVICE_NAME_PRODUCTION }} \
+          --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+          --settings \
+            OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY }}" \
+            OPENAI_BASE_URL="${{ secrets.OPENAI_BASE_URL }}" \
+            WEBSITES_PORT=8001 \
+            SCM_DO_BUILD_DURING_DEPLOYMENT=true
+            
     - name: Notify deployment
       run: |
-        echo "Production deployment completed successfully!"
+        echo "Production deployment to Azure App Service completed successfully!"
         
     - name: Create release
       uses: actions/create-release@v1
@@ -189,7 +218,7 @@ jobs:
           Automated release for commit ${{ github.sha }}
           
           Changes in this release:
-          - Automated deployment from main branch
+          - Automated deployment to Azure App Service
           - All tests passed
           - Security scan completed
         draft: false
