--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-websockets==12.0
-python-multipart==0.0.6
-pandas==2.2.2
-openpyxl==3.1.2
-openai>=1.37.0
-numpy>=1.26.4
-tenacity>=8.2.3
-tqdm>=4.66.4
-scikit-learn>=1.4.2
-PyPDF2>=3.0.0
-python-docx>=0.8.11
+# VeriDoc v2.0 - Updated Requirements  
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
+tiktoken==0.11.0
+openai==1.69.0
+websockets==13.1
+python-multipart==0.0.12
+pandas==2.2.3
+openpyxl==3.1.5
+scikit-learn==1.5.0
+numpy==1.26.4
+PyPDF2==3.0.1
+python-docx==1.1.2
+tenacity==9.0.0
+tqdm==4.67.1
+gunicorn==21.2.0
+python-dotenv==1.0.1
